--- a/index.html
+++ b/index.html
@@ -6,10 +6,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup 2022</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/29bb01b6c2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!--second part-->
+    <section>
+        <div class="flex">
 
+
+        </div>
+        <div class="flex">
+            <div class="container">
+                <div class="card">
+                    <img src="assets/blog-img.png" alt="player">
+                    <button>Transfer</button>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="assets/blog-img.png" alt="player">
+                    <button>Transfer</button>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="assets/blog-img.png" alt="player">
+                    <button>Transfer</button>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="assets/blog-img.png" alt="player">
+                    <button>Transfer</button>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="assets/blog-img.png" alt="player">
+                    <button>Transfer</button>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="assets/blog-img.png" alt="player">
+                    <button>Transfer</button>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="assets/blog-img.png" alt="player">
+                    <button>Transfer</button>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="assets/blog-img.png" alt="player">
+                    <button>Transfer</button>>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="assets/blog-img.png" alt="player">
+                    <button>Transfer</button>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+
+        </div>
+
+
+    </section>
 </body>
 
 </html>
