--- a/index.html
+++ b/index.html
@@ -20,68 +20,87 @@
         <div class="flex">
             <div class="container">
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player">
+                    <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <div class="flex">
+                        <p><i class="fa-solid fa-clock"></i> 10h</p>
+                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player">
+                    <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <div class="flex">
+                        <p><i class="fa-solid fa-clock"></i> 10h</p>
+                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player">
+                    <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <div class="flex">
+                        <p><i class="fa-solid fa-clock"></i> 10h</p>
+                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player">
+                    <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <div class="flex">
+                        <p><i class="fa-solid fa-clock"></i> 10h</p>
+                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player">
+                    <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <div class="flex">
+                        <p><i class="fa-solid fa-clock"></i> 10h</p>
+                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player">
+                    <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <div class="flex">
+                        <p><i class="fa-solid fa-clock"></i> 10h</p>
+                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player">
+                    <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <div class="flex">
+                        <p><i class="fa-solid fa-clock"></i> 10h</p>
+                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player">
-                    <button>Transfer</button>>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <img src="assets/blog-img.png" alt="player"><br>
+                    <button>Transfer</button>
+                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <div class="flex">
+                        <p><i class="fa-solid fa-clock"></i> 10h</p>
+                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player">
+                    <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <div class="flex">
+                        <p><i class="fa-solid fa-clock"></i> 10h</p>
+                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                    </div>
                 </div>
+
             </div>
 
         </div>
