--- a/index.html
+++ b/index.html
@@ -14,15 +14,24 @@
     <!--second part-->
     <section>
         <div class="flex">
+            <div class="left-blog">
+                <ul>
+                    <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">Upcoming
+                            match</a></li>
+
+                    <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">All
+                            Group</a></li>
+                    <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">Blog</a></li>
+                </ul>
 
 
-        </div>
-        <div class="flex">
+            </div>
+
             <div class="container">
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
                         <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
@@ -31,7 +40,7 @@
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
                         <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
@@ -40,7 +49,7 @@
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
                         <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
@@ -49,7 +58,7 @@
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
                         <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
@@ -58,7 +67,7 @@
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
                         <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
@@ -67,7 +76,7 @@
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
                         <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
@@ -76,7 +85,7 @@
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
                         <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
@@ -85,7 +94,7 @@
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
                         <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
@@ -94,7 +103,7 @@
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
                     <button>Transfer</button>
-                    <h3>Transfer chleasa in talks <br> over kimpenbe transfer</h3>
+                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
                         <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
@@ -102,10 +111,7 @@
                 </div>
 
             </div>
-
         </div>
-
-
     </section>
 </body>
 
