--- a/index.html
+++ b/index.html
@@ -8,12 +8,36 @@
     <title>World Cup 2022</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/29bb01b6c2.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!--second part-->
+    <!--Header Section-->
     <section>
-        <div class="flex">
+        <div class="bg-color flexible-display">
+            <div>
+                <h1>The Greatest <br>Show On The Earth</h1>
+                <p>Real Football Games 2020: Footbal Soccer League is a free, innovative, <br> and engaging 3D football
+                    game
+                    that combines the thrill of a real world cup competition.
+                </p>
+                <a class="link-button" href="https://www.bkash.com/products-services/send-money" target="_blank">Watch
+                    live <i class="fa-solid fa-greater-than"></i></a>
+            </div>
+            <div>
+                <img src="assets/banner-img.png" alt="player">
+            </div>
+
+        </div>
+    </section>
+
+    <!--Second section-->
+    <section>
+
+        <div class="split">
+            <!--left side-->
             <div class="left-blog">
                 <ul>
                     <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">Upcoming
@@ -24,9 +48,8 @@
                     <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">Blog</a></li>
                 </ul>
 
-
             </div>
-
+            <!--right side-->
             <div class="container">
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
@@ -83,10 +106,14 @@
                     </div>
                 </div>
 
-
             </div>
         </div>
     </section>
+
+    <!--Footer Section-->
+    <footer>
+
+    </footer>
 </body>
 
 </html>
