--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!--Header Section-->
     <section>
-        <div class="bg-color flexible-display">
+        <div class="top-banner flexible-display">
             <div>
                 <h1>The Greatest <br>Show On The Earth</h1>
                 <p>Real Football Games 2020: Footbal Soccer League is a free, innovative, <br> and engaging 3D football
@@ -112,6 +112,34 @@
 
     <!--Footer Section-->
     <footer>
+        <span class="footer-item">Goal</span>
+        <hr>
+        <span class="footer-display">
+            <span>
+                <p>contact Us</p>
+            </span>
+            <span>
+                <p>Terms of Service </p>
+            </span>
+            <span>
+                <p>Privacy Policy </p>
+            </span>
+            <span>
+                <p>Privacy Settings </p>
+            </span>
+            <span>
+                <p>Goal App </p>
+            </span>
+            <span>
+                <p>Goal Live</p>
+            </span>
+
+
+
+
+
+
+        </span>
 
     </footer>
 </body>
