socia link added

--- a/index.html
+++ b/index.html
@@ -133,13 +133,11 @@
             <span>
                 <p>Goal Live</p>
             </span>
-
-
-
-
-
-
         </span>
+        <br>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
+        <a href="https://twitter.com/?lang=en" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
+        <a href="https://web.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp-square"></i></a>
 
     </footer>
 </body>
