upcoming match added

--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
             <!--left side-->
             <div class="left-blog">
                 <ul>
-                    <li><a href="blog.html" target="_blank">Upcoming
+                    <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">Upcoming
                             match</a></li>
 
                     <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">All
@@ -52,59 +52,60 @@
             <!--right side-->
             <div class="container">
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
-                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
-                        <p><i class="fa-solid fa-clock"></i> 10h</p>
-                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                        <span><img src="assets/Flag.png" alt="player"></span>
+                        <span style="font-size:20px; padding:14px;"><strong> vs</strong></span>
+                        <span><img src="assets/germany Flag.png" alt="player"></span>
                     </div>
+                    <h3>Germany VS France</h3>
+                    <p>April 01, 2022, 1.00 AM</p>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
-                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
-                        <p><i class="fa-solid fa-clock"></i> 10h</p>
-                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                        <span><img src="assets/Flag.png" alt="player"></span>
+                        <span style="font-size:20px; padding:14px;"><strong> vs</strong></span>
+                        <span><img src="assets/germany Flag.png" alt="player"></span>
                     </div>
+                    <h3>Germany VS France</h3>
+                    <p>April 01, 2022, 1.00 AM</p>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
-                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
-                        <p><i class="fa-solid fa-clock"></i> 10h</p>
-                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                        <span><img src="assets/Flag.png" alt="player"></span>
+                        <span style="font-size:20px; padding:14px;"><strong> vs</strong></span>
+                        <span><img src="assets/germany Flag.png" alt="player"></span>
                     </div>
+                    <h3>Germany VS France</h3>
+                    <p>April 01, 2022, 1.00 AM</p>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
-                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
-                        <p><i class="fa-solid fa-clock"></i> 10h</p>
-                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                        <span><img src="assets/Flag.png" alt="player"></span>
+                        <span style="font-size:20px; padding:14px;"><strong> vs</strong></span>
+                        <span><img src="assets/germany Flag.png" alt="player"></span>
                     </div>
+                    <h3>Germany VS France</h3>
+                    <p>April 01, 2022, 1.00 AM</p>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
-                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
-                        <p><i class="fa-solid fa-clock"></i> 10h</p>
-                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                        <span><img src="assets/Flag.png" alt="player"></span>
+                        <span style="font-size:20px; padding:14px;"><strong> vs</strong></span>
+                        <span><img src="assets/germany Flag.png" alt="player"></span>
                     </div>
+                    <h3>Germany VS France</h3>
+                    <p>April 01, 2022, 1.00 AM</p>
                 </div>
                 <div class="card">
-                    <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
-                    <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
-                        <p><i class="fa-solid fa-clock"></i> 10h</p>
-                        <p style="margin-left:10px"><i class="fa-solid fa-message"></i> 23</p>
+                        <span><img src="assets/Flag.png" alt="player"></span>
+                        <span style="font-size:20px; padding:14px;"><strong> vs</strong></span>
+                        <span><img src="assets/germany Flag.png" alt="player"></span>
                     </div>
+                    <h3>Germany VS France</h3>
+                    <p>April 01, 2022, 1.00 AM</p>
                 </div>
+
 
             </div>
 
