--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
                     <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">All
                             Group</a></li>
-                    <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">Blog</a></li>
+                    <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">Blog</a>
+                    </li>
                 </ul>
 
             </div>
