--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </section>
 
-    <!--Second section-->
+    <!--Second Section-->
     <section>
 
         <div class="split">
@@ -43,9 +43,9 @@
                     <li><a href="blog.html" target="_blank">Upcoming
                             match</a></li>
 
-                    <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">All
+                    <li><a href="https://www.cityfootballgroup.com/" target="_blank">All
                             Group</a></li>
-                    <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">Blog</a>
+                    <li><a href="index.html" target="_blank">Blog</a>
                     </li>
                 </ul>
 
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
+                    <button class="player-btn">Transfer</button>
                     <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
+                    <button class="player-btn">Transfer</button>
                     <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
+                    <button class="player-btn">Transfer</button>
                     <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
+                    <button class="player-btn">Transfer</button>
                     <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
+                    <button class="player-btn">Transfer</button>
                     <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="card">
                     <img src="assets/blog-img.png" alt="player"><br>
-                    <button>Transfer</button>
+                    <button class="player-btn">Transfer</button>
                     <h3>Transfer Live:chleasa in talks <br> over kimpenbe transfer</h3>
                     <div class="flex">
                         <p><i class="fa-solid fa-clock"></i> 10h</p>
@@ -110,6 +110,7 @@
             </div>
 
         </div>
+        <button class="extra-btn">View All</button>
     </section>
 
     <!--Footer Section-->
