--- a/blog.html
+++ b/blog.html
@@ -40,12 +40,12 @@
             <!--left side-->
             <div class="left-blog">
                 <ul>
-                    <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">Upcoming
+                    <li><a href="blog.html" target="_blank">Upcoming
                             match</a></li>
 
-                    <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">All
+                    <li><a href="https://www.cityfootballgroup.com/" target="_blank">All
                             Group</a></li>
-                    <li><a href="https://www.bkash.com/products-services/send-money" target="_blank">Blog</a></li>
+                    <li><a href="index.html" target="_blank">Blog</a></li>
                 </ul>
 
             </div>
