--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
         </div>
     </section>
 
-    <!--Second section-->
+    <!--Flag section-->
     <section>
 
         <div class="split">
